--- a/css/main.css
+++ b/css/main.css
@@ -8,14 +8,18 @@ body {
   height: 2000px;
 } */
 body {
-  background: url('https://source.unsplash.com/twukN12EN7c/1920x1080') no-repeat center center fixed;
+  background: url('https://raw.githubusercontent.com/doaaabdelhadi/doaaabdelhadi.github.io/master/img/bc.jpg?token=AHFH2OVUVAKKRTI6UHJJ7VS7CU5PA') no-repeat center center fixed;
   -webkit-background-size: cover;
   -moz-background-size: cover;
   background-size: cover;
   -o-background-size: cover;
 }
 
-.navbar-brand span{
+.intro h1{
+  color: aliceblue;
+
+}
+/* .navbar-brand span{
   font-size: 22px;
 }
 
@@ -44,4 +48,4 @@ body {
 
 .post{
   padding: 70px;;
-}
+} */
