--- a/css/main.css
+++ b/css/main.css
@@ -13,7 +13,7 @@ html{
   
 }
 body {
-  background: url('https://lh3.googleusercontent.com/kQyXkrnBLpuU0p57dW2b8xglAYYMoanS2LzRN0fp5K6tUZUJ2nCcV5QWkIyz63H6ZbZlqCXfDmQq7xZOZ1XRy00_akyRUbviSj2MBWM7esFdy8KzZmD5Z9RLWsHS2rzhvzAmIAd0iwDB_K_9NGIU1V43WwvVj4m5Fzb90gSTgK5g-KvTlDQ4s4-3wiRoN3_Br8aJ6gYJ4xHhMc7awJeENt-wdGM_7XHP1ZztK4uygMmpJym0Fvl-aA1VuB__bQ7GvjF398lusVP3RRrAgXoE6lZs0dghW-AFLyOCR2VnHwRoJ6N9BU8ln1PKzckwDIb9nI_MXgnjwAQUbs_BhGy7fAPJMYgKwjErSMGJzObedvp2YiMVBzlk5Ya8-93YXPkG9t60Pok1MWghAr49MBeQGZc1o4LWH5rr5zkhpzEGy1_ZoNKOqg94lM-KyDCWOL9HJNHYzDk8VUr3U_549o340YtIwkG9TwIfqO8theZb89rQEGXrerU3oNgoM8f2KY6O0myPvdZSxEqHOx2xCSKp79L9MVEjKb8UuLzmsGghg-x-f5SMDUtM7NF73LbmF0aIwLbU08iNoDDgaO5oL7n4UxsUuRSjnprTVWEqdCTcDc9WpsVaaJdDZzj8fNlDOQBBtxXtvrXQbRW_a8fa1PRS3I_Fk19qNyVC1Iy4W8jYgwRFCJy8n1xHBqvE9UvP=w937-h625-no?authuser=2') no-repeat center center fixed;
+  background:url('https://raw.githubusercontent.com/doaaabdelhadi/doaaabdelhadi.github.io/master/img/bc4.jpg?token=AHFH2OWWLLWGE4SYCAMP2MS7CXLII') no-repeat center center fixed;
   -webkit-background-size: cover;
   -moz-background-size: cover;
   background-size: cover;
@@ -22,18 +22,34 @@ body {
 
 
 .intro h1{
-  color: orange;
+  color: black;
   text-align: center;
   
 
 }
 .intro p{
-  color:orange;
+  color:black;
   font-size: 22px;
   text-align: center;
   
 
 }
+.intro i{
+  font-size: 1em;
+  color: slategrey;
+
+  /* padding: 10px; */
+
+}
+.intro .skills {
+  color: slategrey;
+  /* font-style: italic; */
+}
+.intro .K_word{
+  text-decoration: underline;
+}
+
+
 .icons-social{
   text-align: center;
 }
@@ -41,6 +57,7 @@ body {
 .icons-social i{
   font-size: 2em;
   padding: 10px;
+  color:aliceblue;
   
 }
 .icons-social a{
